--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,7 +253,7 @@ text-shadow: 0 0 1px #000;
 #content .background{
     margin-top: 46px;
     padding-top: 50%;
-  background: url(https://images6.alphacoders.com/820/thumb-1920-820024.png) center /cover no-repeat;
+  background: url('https://images6.alphacoders.com/820/thumb-1920-820024.png') center /cover no-repeat;
     
 }
 
